# code

./: readme.txt
acts/: txt.txt
acts-gun-geant-odd/: main.py  txt.txt
acts-gun-generic-optuna/: ckf.py  main.py
acts-odd-optuna/: analyze_get_best_trial.py  analyze_parameters.py  analyze_performance_ckf.py  analyze_root.py  analyze_sanity.py  analyze_score.py  analyze_trial.py  analyze_trials.py  get_plots.C  main.py  main_objective.py  main_sequence.py  objective.py  optimize.py  readme.md  review.py  sequence.py  simulate-generic.py  simulate-odd.py
acts-odd-optuna/analyze_root/: CMakeLists.txt  main.cpp
acts-pythia-odd-fatras-ckf/: main.py  txt.txt
acts-pythia-odd-optuna/: analyze_get_best_trial.py  analyze_parameters.py  get_denominator.py  get_efficiency_pngs.py  get_parameter_pngs.py  get_pngs.py  get_radius.py  get_score_png.py  get_study.py  get_trial_pngs.py  main.py  objective.py  optimize_optuna.py  readme.txt  sequence.py
acts/example1/: main.py
ckf/: ckf.txt
dd4hep-codex/: txt.txt
js/: cleanup.py  deleter.js  edger.js  editor.js  mover.js  node.js  package.json  server.js
odd/: txt.txt
os/arch/: .bashrc  (+15 more)
py/: get_best_trial.py  get_denominator.py  get_efficiency_per_trial.py  get_efficiency_pngs.py  get_figure.py  get_fonts.py  get_n.py  get_numerator.py  get_numerator_pngs.py  get_png_grid.py  get_pngs.py  get_simulation.py  get_study.py  get_time.py  get_time_dir.py  objective.py  optimize_optuna.py  sequence.py  stable_matcher.py
sh/: check.sh  dl.sh  dlslow.sh  production.sh  txt
sid/: run  sid.txt  steering.py
tex/: sty.sty
(+11 files in other folders)
