cmake_minimum_required(VERSION 3.14)
project(project)
find_package(ROOT REQUIRED CONFIG COMPONENTS Core Geom GenVector Hist Tree)
add_executable(main main.cpp)
#target_link_libraries(main PRIVATE ${ROOT_LIBRARIES})
target_link_libraries(main PRIVATE ROOT::Core ROOT::Hist ROOT::Tree)

# function(check_root_compatibility)
#   get_target_property(ROOT_INCLUDE_DIR ROOT::Core INTERFACE_INCLUDE_DIRECTORIES)
#   # set(CMAKE_REQUIRED_FLAGS -std=c++17)
#   set(CMAKE_REQUIRED_INCLUDES ${ROOT_INCLUDE_DIR})
#   check_cxx_source_compiles("#include <string>\n#include <TString.h>\nint main(){}" ROOT_COMPATIBILITY_CHECK)
#   if(NOT ROOT_COMPATIBILITY_CHECK)
#     message(FATAL_ERROR "Root installation is misconfigured. Ensure that your Root installation was compiled with C++17.")
#   endif()
# endfunction()
# check_root_compatibility()
#include_directories(include)
#add_library(Event SHARED Event.cxx)
#target_link_libraries(Event PUBLIC ROOT::RIO ROOT::Net)
